# tictactoe

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c
include/: tictactoe.h
src/: main.c  tictactoe.c
